k8s/overlays/staging/staging-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-frontend-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: monitoring-frontend-staging.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-frontend-service
            port:
              number: 8080  # Assure-toi que le service expose bien ce port
